--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
 
 #screen-display{
     display:flex;
+    justify-content:flex-end;
     align-items: center;
     height:60px;
     font-size:40px;
@@ -19,6 +20,7 @@
     border-radius:5%;
     border: 2px solid black;
     width:200px;
+    text-align:right;
 }
 
 #buttons button{
